# SQLSparkOptimizer

./: .gitignore  README.md  bench.py  phase1_spine.py  phase2_optimize.py  phase2b_pushdown.py  phase2c_graph.py  phase2d_retrieval.py  phase3_orchestrate.py  phase4_eval.py  phase5_escalate.py  plan_graph_store.py  pyproject.toml  requirements.txt  routing.py  sql-spark-multiagent-roadmap.md  stress_test.py  webserver.py  whole_workload.py
agents/: optimizer.py  plan_analyzer.py  rules.py  translator.py  validator.py
data/: spark_smoke.py  tpch_setup.py
databricks/: optimize_on_databricks.py  optimize_serverless.py
docs/: demo_data.js  design-rationale.md  index.html  learning-notes.md
examples/queries/: revenue_by_nation.sql  shipped_1994.sql
frontend/: index.html
knowledge/: ingest_spark_docs.py  kb.py
observability/: tracing.py
orchestrator/: graph.py
scripts/: gen_demo_data.py
sqlspark_optimizer/: __init__.py  analyze.py  api.py  bench.py  cli.py  generator.py  loaders.py  plan_graph_store.py  routing.py  runtime.py  workload.py
sqlspark_optimizer/agents/: optimizer.py  plan_analyzer.py  translator.py  validator.py
sqlspark_optimizer/knowledge/: ingest_spark_docs.py
sqlspark_optimizer/observability/: eval.py  tracing.py
sqlspark_optimizer/orchestrator/: graph.py
tests/: test_generator.py  test_loaders.py  test_optimizer.py  test_routing_graph.py  test_rules.py  test_validator.py
